package org.example.modelo.controlador;

public interface Control {
    void moverArriba();
    void moverAbajo();
    void moverDerecha();
    void moverIzquierda();
    void detener();
    void disparar();
}
